<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBlack2"
    android:orientation="vertical"
    android:padding="10dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/new_entry_hero"
                android:textColor="@color/colorBlack"/>

            <CheckBox
                android:id="@+id/hero_Iron_man"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorBlack"
                android:text="@string/new_entry_hero_Iron_Man" />

            <CheckBox
                android:id="@+id/hero_Captain_America"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorBlack"
                android:text="@string/new_entry_hero_Captain_America" />

            <CheckBox
                android:id="@+id/hero_Thor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorBlack"
                android:text="@string/new_entry_hero_Thor" />

            <CheckBox
                android:id="@+id/hero_Hulk"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorBlack"
                android:text="@string/new_entry_hero_Hulk"
                android:checked="true"/>

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/new_entry_power"
                android:textColor="@color/colorBlack"/>

            <RadioGroup
                android:id="@+id/powers"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorBlack"
                    android:text="@string/new_entry_power_10" />

                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorBlack"
                    android:text="@string/new_entry_power_50" />

                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorBlack"
                    android:text="@string/new_entry_power_110" />

                <RadioButton
                    android:id="@+id/two_thousand"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorBlack"
                    android:text="@string/new_entry_power_160"
                    android:checked="true"/>
            </RadioGroup>

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/new_entry_last_update"
                android:textColor="@color/colorBlack"/>

            <Spinner
                android:id="@+id/strength"
                android:layout_width="match_parent"
                android:textColor="@color/colorBlack"
                android:layout_height="wrap_content" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/new_entry_speed"
                android:textColor="@color/colorBlack"/>

            <EditText
                android:id="@+id/speeds"
                android:layout_width="match_parent"
                android:textColor="@color/colorBlack"
                android:inputType="numberSigned"
                android:layout_height="wrap_content"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/new_entry_command"
                android:textColor="@color/colorBlack"/>
            <EditText
                android:id="@+id/command"
                android:layout_width="match_parent"
                android:textColor="@color/colorBlack"
                android:layout_height="wrap_content"/>
            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <Button
                android:id="@+id/display_selected_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorRed"
                android:text="@string/new_entry_display_btn" />
        </LinearLayout>

    </ScrollView>

</LinearLayout>