<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBlack2"
    android:orientation="vertical"
    android:padding="10dp">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:src="@drawable/logo" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="casual"
        android:text="@string/app_title"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/colorGold"
        android:textSize="30dp" />

    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorGold"
        android:hint="@string/login_username" />



    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:textColor="@color/colorGold"
        android:hint="@string/login_password" />

    <CheckBox
        android:id="@+id/rememberMe"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorGold"
        android:text= "@string/login_checkbox" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2">

        <Button
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/colorRed"
            android:text="@string/login_login_btn" />

        <Button
            android:id="@+id/register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/colorGold"
            android:text="@string/login_register_btn" />

    </LinearLayout>

</LinearLayout>