<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBlack2"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="108dp"
        android:fontFamily="casual"
        android:text="@string/app_registration"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/colorGold"
        android:textSize="50dp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="50dp" />

    <EditText
        android:id="@+id/usernames"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorGold"
        android:textColorHint="@color/colorGold"
        android:hint="@string/register_username" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="30dp" />

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorGold"
        android:hint="@string/register_email" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="30dp" />

    <EditText

        android:id="@+id/passwords"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorGold"
        android:hint="@string/register_password"
        android:inputType="textPassword" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="30dp" />

    <Button
        android:id="@+id/registers"
        android:layout_width="223dp"
        android:layout_height="62dp"
        android:layout_weight="0"
        android:background="@color/colorRed"
        android:text="@string/register_register_btn" />

</LinearLayout>